--- a/index.html
+++ b/index.html
@@ -6,28 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous" />
+          integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous"/>
     <script async src="./js/modernizr-custom.js"></script>
     <title>Nftlandingpage</title>
 </head>
 
 <body>
-        <!-- Header -->
-    <header class="header">
-        <div class="container">
-    <div class="header__left">
-        <a href="#" class="logo-name"><img class="logo" src="./img/logo.svg" alt="logo">Base</a>
-    </div>
-    <div class="header__right">
-        <nav class="header__navbar">
-            <ul class="header__navbar-menu">
-                <li><a href="#home" class="active">Home</a></li>
-                <li><a href="#future">Future</a></li>
-                <li><a href="#product">Product</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-            <button class="button btn">Bild Now</button>
-        </nav>        
+<!-- Header -->
+<header class="header">
+    <div class="container">
+        <div class="header__left">
+            <a href="#" class="logo-name"><img class="logo" src="./img/logo.svg" alt="logo">Base</a>
+        </div>
+        <div class="header__right">
+            <nav class="header__navbar">
+                <ul class="header__navbar-menu">
+                    <li><a href="#home" class="active">Home</a></li>
+                    <li><a href="#future">Future</a></li>
+                    <li><a href="#product">Product</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+                <button class="button btn">Bild Now</button>
+            </nav>
         </div>
     </div>
     <div class="hero">
@@ -44,47 +44,108 @@
                         <div class="hero__counter-count">5.00 ETH</div>
                         <span class="hero__counter-span">$11,373.55</span>
                     </div>
-                        <div class="hero__counter-right">
-                            <span class="hero__counter-span_title">Auction ends in</span>
+                    <div class="hero__counter-right">
+                        <span class="hero__counter-span_title">Auction ends in</span>
+                        <div class="hero__counter-right-blocks">
+                            <div>
                                 <div class="hero__counter-count">16</div>
-                                    <span class="hero__counter-span">Hours</span>
-                             <div class="hero__counter-count">30<div>
+                                <span class="hero__counter-span">Hours</span>
+                            </div>
+                            <div>
+                                <div class="hero__counter-count">30</div>
                                 <span class="hero__counter-span">Minutes</span>
+                            </div>
+                            <div>
                                 <div class="hero__counter-count">60</div>
                                 <span class="hero__counter-span">Secund</span>
+                            </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="hero__right">
+                <img class="hero__right-img" src="img/head.png" alt="">
             </div>
         </div>
     </div>
-    </header>
-   
+    </div>
+
+    <svg class="hero__right-svg-one " viewBox="0 0 402 396" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path opacity="0.1" d="M348.718 197.691C348.718 278.204 282.46 343.474 200.726 343.474C118.993 343.474 52.7344 278.204 52.7344 197.691C52.7344 117.177 118.993 51.9075 200.726 51.9075C282.46 51.9075 348.718 117.177 348.718 197.691ZM60.433 197.691C60.433 274.016 123.244 335.89 200.726 335.89C278.208 335.89 341.02 274.016 341.02 197.691C341.02 121.365 278.208 59.4911 200.726 59.4911C123.244 59.4911 60.433 121.365 60.433 197.691Z" fill="url(#paint0_linear_40_244)"/>
+        <path opacity="0.1" d="M374.119 197.691C374.119 292.233 296.488 368.875 200.726 368.875C104.963 368.875 27.332 292.233 27.332 197.691C27.332 103.148 104.963 26.5059 200.726 26.5059C296.488 26.5059 374.119 103.148 374.119 197.691ZM36.352 197.691C36.352 287.315 109.945 359.97 200.726 359.97C291.507 359.97 365.099 287.315 365.099 197.691C365.099 108.066 291.507 35.4109 200.726 35.4109C109.945 35.4109 36.352 108.066 36.352 197.691Z" fill="url(#paint1_linear_40_244)" fill-opacity="0.4"/>
+        <path opacity="0.1" d="M401.176 197.691C401.176 306.872 311.554 395.382 201 395.382C90.4459 395.382 0.824219 306.872 0.824219 197.691C0.824219 88.5092 90.4459 0 201 0C311.554 0 401.176 88.5092 401.176 197.691ZM11.2374 197.691C11.2374 301.193 96.197 385.098 201 385.098C305.803 385.098 390.762 301.193 390.762 197.691C390.762 94.1888 305.803 10.2839 201 10.2839C96.197 10.2839 11.2374 94.1888 11.2374 197.691Z" fill="url(#paint2_linear_40_244)" fill-opacity="0.2"/>
+        <path opacity="0.2" d="M324.421 197.691C324.421 266.006 269.165 321.386 201.003 321.386C132.84 321.386 77.584 266.006 77.584 197.691C77.584 129.376 132.84 73.9961 201.003 73.9961C269.165 73.9961 324.421 129.376 324.421 197.691ZM84.0043 197.691C84.0043 262.452 136.386 314.951 201.003 314.951C265.619 314.951 318.001 262.452 318.001 197.691C318.001 132.93 265.619 80.4307 201.003 80.4307C136.386 80.4307 84.0043 132.93 84.0043 197.691Z" fill="url(#paint3_linear_40_244)"/>
+        <path opacity="0.2" d="M302.92 197.47C302.92 254.078 257.289 299.969 201 299.969C144.711 299.969 99.0801 254.078 99.0801 197.47C99.0801 140.861 144.711 94.9707 201 94.9707C257.289 94.9707 302.92 140.861 302.92 197.47ZM111.691 197.47C111.691 247.074 151.676 287.286 201 287.286C250.324 287.286 290.309 247.074 290.309 197.47C290.309 147.865 250.324 107.653 201 107.653C151.676 107.653 111.691 147.865 111.691 197.47Z" fill="url(#paint4_linear_40_244)"/>
+        <path opacity="0.2" d="M275.122 197.47C275.122 238.727 241.936 272.172 200.999 272.172C160.061 272.172 126.875 238.727 126.875 197.47C126.875 156.213 160.061 122.767 200.999 122.767C241.936 122.767 275.122 156.213 275.122 197.47ZM143.376 197.47C143.376 229.542 169.174 255.543 200.999 255.543C232.823 255.543 258.621 229.542 258.621 197.47C258.621 165.397 232.823 139.397 200.999 139.397C169.174 139.397 143.376 165.397 143.376 197.47Z" fill="url(#paint5_linear_40_244)"/>
+        <ellipse opacity="0.2" cx="200.999" cy="197.47" rx="37.0618" ry="37.6409" fill="url(#paint6_linear_40_244)"/>
+        <defs>
+            <linearGradient id="paint0_linear_40_244" x1="52.7344" y1="247.757" x2="348.75" y2="247.566" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#CB47A0"/>
+                <stop offset="0.494792" stop-color="#6947CB"/>
+                <stop offset="1" stop-color="#00FF85"/>
+            </linearGradient>
+            <linearGradient id="paint1_linear_40_244" x1="27.332" y1="256.481" x2="374.156" y2="256.257" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#CB47A0"/>
+                <stop offset="0.494792" stop-color="#6947CB"/>
+                <stop offset="1" stop-color="#00FF85"/>
+            </linearGradient>
+            <linearGradient id="paint2_linear_40_244" x1="0.824219" y1="265.584" x2="401.218" y2="265.326" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#CB47A0"/>
+                <stop offset="0.494792" stop-color="#6947CB"/>
+                <stop offset="1" stop-color="#00FF85"/>
+            </linearGradient>
+            <linearGradient id="paint3_linear_40_244" x1="77.584" y1="240.172" x2="324.448" y2="240.015" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#CB47A0"/>
+                <stop offset="0.494792" stop-color="#6947CB"/>
+                <stop offset="1" stop-color="#00FF85"/>
+            </linearGradient>
+            <linearGradient id="paint4_linear_40_244" x1="99.0801" y1="232.671" x2="302.941" y2="232.542" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#CB47A0"/>
+                <stop offset="0.494792" stop-color="#6947CB"/>
+                <stop offset="1" stop-color="#00FF85"/>
+            </linearGradient>
+            <linearGradient id="paint5_linear_40_244" x1="126.875" y1="223.125" x2="275.138" y2="223.031" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#CB47A0"/>
+                <stop offset="0.494792" stop-color="#6947CB"/>
+                <stop offset="1" stop-color="#00FF85"/>
+            </linearGradient>
+            <linearGradient id="paint6_linear_40_244" x1="163.938" y1="210.397" x2="238.069" y2="210.351" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#CB47A0"/>
+                <stop offset="0.494792" stop-color="#6947CB"/>
+                <stop offset="1" stop-color="#00FF85"/>
+            </linearGradient>
+        </defs>
+    </svg>
+</header>
+
 <div class="hero-counter-main">
     <div>
         <div class="hero-count">1099k+</div>
-    <div class="hero-count-text">At work</div>
+        <div class="hero-count-text">At work</div>
     </div>
     <div>
         <div class="hero-count">399k+</div>
         <div class="hero-count-text">Aucation</div>
     </div>
     <div>
-    <div class="hero-count">99k+</div>
-    <div class="hero-count-text">Aucation</div>
-    </div> 
-</div>
-    <div class="hero-content-main">
-        <div class="hero-content-image">
-                <img width="250" height="250" class="hero-pic" src="img/Rectangle 87.png" alt="face1">
-                <img width="250" height="250" class="hero-pic"src="img/Rectangle 85.png" alt="face2">
-                <img width="250" height="250" class="hero-pic"src="/img/Rectangle 88.png" alt="face3">
-                <img width="250" height="250" class="hero-pic"src="/img/Rectangle 86.png" alt="face4">
-        </div>
-        <div class="hero-content-title">
-            <h2>We give the best quality NFT For you</h2>
-            <h3>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</h3>
-        <button class="button btn">See more</button>
-        </div>
+        <div class="hero-count">99k+</div>
+        <div class="hero-count-text">Aucation</div>
     </div>
+</div>
+<div class="hero-content-main">
+    <div class="hero-content-image">
+        <img width="250" height="250" class="hero-pic" src="img/Rectangle 87.png" alt="face1">
+        <img width="250" height="250" class="hero-pic" src="img/Rectangle 85.png" alt="face2">
+        <img width="250" height="250" class="hero-pic" src="/img/Rectangle 88.png" alt="face3">
+        <img width="250" height="250" class="hero-pic" src="/img/Rectangle 86.png" alt="face4">
+    </div>
+    <div class="hero-content-title">
+        <h2>We give the best quality NFT For you</h2>
+        <h3>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim
+            velit mollit. Exercitation veniam consequat sunt nostrud amet.</h3>
+        <button class="button btn">See more</button>
+    </div>
+</div>
 </div>
 </body>
 </html>
